# Project-Chimera

./: agi_project_collaboration.md  agi_project_summary.md  project_roadmap.md  run_tests.bat
agi-project/: .gitignore  Dockerfile  README.md  pyproject.toml
agi-project/src/: main.py
agi-project/src/agent/: agent.py  file.txt  memory.py  tool_user.py
agi-project/src/cognitive_core/: data_loader.py  interfaces.py  model.py  prometheus_core.py
agi-project/src/protos/: core.proto
agi-project/tests/: test_agent_logic.py  test_serch.py
